# ezib_async

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Makefile  README.md  coverage.json  pyproject.toml  pytest.ini
.github/workflows/: release.yml
examples/: README.md  account_info.py  accountinfo.py  bracket_order.py  combo_orders.py  custom_callbacks.py  historical_data.py  market_data.py  market_depth.py  submit_order.py
ezib_async/: __init__.py  client.py  connection.py  contracts.py  ezib.py  util.py
notebooks/: accountinfo.ipynb  bracketorder.ipynb  customcallback.ipynb  marketdata.ipynb  marketdepth.ipynb  optionsdata.ipynb  order.ipynb
scripts/: update_badges.py
src/ezib_async/: __init__.py  ezib.py
tests/: conftest.py  test_account.py  test_contracts.py  test_portfolio.py  test_positions.py  test_reconnect.py
