[project]
name = "ezib-async"
dynamic = ["version"]
description = "An asynchronous Python wrapper for Interactive Brokers API based on ib_async, providing a more Pythonic and asyncio-friendly interface."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ib-async>=1.0.3",
    "pandas>=2.2.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11"
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.26.0",
]
[tool.setuptools]
packages = ["ezib_async"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ezib_async.version.__version__"}
